POWR-735 Add the group field. Alter Add/Edit form for content and media.

--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - image.style.thumbnail
     - media.type.image
   module:
+    - chosen_field
     - content_moderation
     - image
 _core:
@@ -17,6 +19,12 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
+  field_group:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   image:
     type: image_image
     weight: 1
@@ -27,7 +35,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -41,7 +49,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 2
+    weight: 3
     region: content
     settings:
       display_label: true
