--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -8,12 +8,14 @@ dependencies:
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
+    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
     - node.type.event
   module:
+    - chosen_field
     - conditional_fields
     - content_moderation
     - datetime
@@ -52,6 +54,7 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     type: paragraphs
     region: content
@@ -63,7 +66,9 @@ content:
     region: content
   field_end_time:
     weight: 10
-    settings: {  }
+    settings:
+      enabled: false
+      step: 5
     third_party_settings:
       conditional_fields:
         199340d9-1e64-4676-be98-142450179a38:
@@ -96,8 +101,14 @@ content:
       default_paragraph_type: _none
     third_party_settings: {  }
     region: content
+  field_group:
+    weight: 13
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
-    weight: 26
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -112,7 +123,9 @@ content:
     region: content
   field_start_time:
     weight: 8
-    settings: {  }
+    settings:
+      enabled: false
+      step: 5
     third_party_settings:
       conditional_fields:
         0e2a458c-ff52-4f8c-bf7a-6ef4359d1868:
@@ -148,7 +161,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 13
+    weight: 14
     settings: {  }
     region: content
     third_party_settings: {  }
