--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_group
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_reviewer
@@ -22,12 +23,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body:
-    weight: 4
+    weight: 3
     settings:
       title: paragraph
       title_plural: paragraphs
@@ -45,8 +46,14 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_group:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
-    weight: 26
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -54,7 +61,7 @@ content:
     type: string_textfield
     region: content
   field_related_content:
-    weight: 5
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
@@ -63,7 +70,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 27
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -72,7 +79,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_summary:
-    weight: 3
+    weight: 2
     settings:
       rows: 2
       placeholder: ''
@@ -98,7 +105,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -119,12 +126,12 @@ content:
     third_party_settings: {  }
   uid:
     type: options_select
-    weight: 6
+    weight: 5
     settings: {  }
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
