--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
@@ -26,6 +27,14 @@ content:
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
+  field_group:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   image:
     type: responsive_image
     weight: 1
