--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_group
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
@@ -43,6 +44,12 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_group:
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
     weight: 9
     settings:
@@ -68,7 +75,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 14
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -124,7 +131,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 15
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
