--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_group
     - field.field.node.information.field_legacy_path
     - field.field.node.information.field_summary
     - node.type.information
   module:
+    - chosen_field
     - content_moderation
     - paragraphs
     - path
@@ -38,7 +40,14 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
+    region: content
+  field_group:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
     region: content
   field_summary:
     weight: 1
@@ -55,7 +64,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 10
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -82,7 +91,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 11
     region: content
     third_party_settings: {  }
   sticky:
