--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
@@ -20,12 +21,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body:
-    weight: 4
+    weight: 3
     settings:
       title: paragraph
       title_plural: paragraphs
@@ -39,11 +40,18 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_group:
+    weight: 7
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
-    weight: 26
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -51,7 +59,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     settings:
       rows: 2
       placeholder: ''
@@ -64,7 +72,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -77,7 +85,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -98,7 +106,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
