--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_group
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
@@ -42,6 +43,14 @@ targetEntityType: node
 bundle: city_service
 mode: default
 content:
+  field_group:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 2
