--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_group
     - field.field.node.information.field_legacy_path
     - field.field.node.information.field_summary
     - node.type.information
@@ -42,6 +43,14 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_group:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 0
