--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_audience
+    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_related_content
@@ -38,6 +39,14 @@ targetEntityType: node
 bundle: page
 mode: default
 content:
+  field_group:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_page_type:
     weight: 0
     label: hidden
