POWR-719 enable authenticated users access to simplified_editor_with_media_embed

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -41,6 +41,7 @@ permissions:
   - 'use media transition publish'
   - 'use media transition restore'
   - 'use text format simple_editor'
+  - 'use text format simplified_editor_with_media_embed'
   - 'view all media revisions'
   - 'view all revisions'
   - 'view any unpublished content'
