POWR-719 removed access restrictions on media entity browsers

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -32,9 +32,8 @@ display:
     position: 0
     display_options:
       access:
-        type: perm
-        options:
-          perm: 'access media overview'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
@@ -858,7 +857,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   document_browser:
     display_plugin: entity_browser
@@ -945,6 +943,7 @@ display:
         css_class: false
         arguments: false
         relationships: false
+        access: false
       row:
         type: fields
         options: {  }
@@ -1725,6 +1724,9 @@ display:
           entity_type: media
           entity_field: uid
           plugin_id: standard
+      access:
+        type: none
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -1732,9 +1734,9 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags:
         - 'config:field.storage.media.field_document'
+        - extensions
   entity_browser_1:
     display_plugin: entity_browser
     id: entity_browser_1
@@ -2158,7 +2160,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   entity_browser_2:
     display_plugin: entity_browser
@@ -2545,7 +2546,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   entity_browser_3:
     display_plugin: entity_browser
@@ -3424,7 +3424,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   entity_browser_4:
     display_plugin: entity_browser
@@ -3513,6 +3512,7 @@ display:
         css_class: false
         arguments: false
         relationships: false
+        access: false
       row:
         type: fields
         options: {  }
@@ -4294,6 +4294,9 @@ display:
           entity_type: media
           entity_field: uid
           plugin_id: standard
+      access:
+        type: none
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -4301,7 +4304,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   image_table_browser:
     display_plugin: entity_browser
@@ -5202,7 +5204,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   media_page_list:
     display_plugin: page
@@ -5220,7 +5221,6 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
   video_browser:
     display_plugin: entity_browser
@@ -6096,5 +6096,4 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.permissions
       tags: {  }
