POWR-735 Remove Group field from info and guide. Add it to notification.

--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -37,6 +37,7 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_group: true
   field_media_in_library: true
   thumbnail: true
   uid: true
