--- a/web/sites/default/config/field.field.node.notification.field_group.yml
+++ b/web/sites/default/config/field.field.node.notification.field_group.yml
@@ -1,4 +1,4 @@
-uuid: 7eef7cd4-c4a1-486d-94a5-de1178962b69
+uuid: eaddea58-017e-49ab-a3ec-3183de0c4591
 langcode: en
 status: true
 dependencies:
@@ -8,17 +8,17 @@ dependencies:
     - group.type.elected_official
     - group.type.program
     - group.type.project
-    - node.type.information
+    - node.type.notification
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.information.field_group
+id: node.notification.field_group
 field_name: field_group
 entity_type: node
-bundle: information
+bundle: notification
 label: Group
 description: ''
 required: false
