--- a/web/sites/default/config/core.entity_form_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.notification.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
+    - chosen_field
     - content_moderation
     - link
     - path
@@ -30,6 +32,12 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_group:
+    weight: 8
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_notification_severity:
     weight: 1
     settings: {  }
@@ -51,7 +59,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 10
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -65,7 +73,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   title:
