--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -29,6 +29,7 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_group: true
   field_media_in_library: true
   name: true
   thumbnail: true
