--- a/web/sites/default/config/core.entity_view_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
     - field.field.node.notification.field_summary
     - node.type.notification
@@ -34,6 +35,14 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
+    region: content
+  field_group:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_notification_severity:
     weight: 0
