--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.audio.field_group
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
+    - chosen_field
     - content_moderation
     - maxlength
     - text
@@ -17,6 +19,12 @@ targetEntityType: media
 bundle: audio
 mode: default
 content:
+  field_group:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_media_video_embed_field:
     weight: 1
     settings: {  }
@@ -33,7 +41,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -55,7 +63,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
