--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - field.field.media.document.field_document
     - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
     - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
+    - chosen_field
     - content_moderation
     - file
 _core:
@@ -26,6 +28,12 @@ content:
     third_party_settings: {  }
     type: file_generic
     region: content
+  field_group:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_summary:
     weight: 1
     settings:
@@ -41,7 +49,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -55,7 +63,7 @@ content:
     region: content
   status:
     type: boolean_checkbox
-    weight: 3
+    weight: 4
     region: content
     settings:
       display_label: true
