--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_document
     - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
     - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
@@ -50,6 +51,14 @@ content:
             lb-col: false
             classes: {  }
     type: file_default
+    region: content
+  field_group:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 1
