POWR-735 clean up config conflicts.

--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -36,11 +36,6 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
-  field_group:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: chosen_select
   field_body_content:
     weight: 5
     settings:
@@ -48,6 +43,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_group:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
     region: content
   field_legacy_path:
     weight: 7
