--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -42,6 +42,13 @@ targetEntityType: node
 bundle: page
 mode: default
 content:
+  field_body_content:
+    weight: 2
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_group:
     weight: 3
     label: above
@@ -49,12 +56,6 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  field_body_content:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
     region: content
   field_page_type:
     weight: 0
