POWR-735 Add sleep after waking site

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,13 +188,13 @@ behat_tests: &behat_tests
               # sleep 20s
               # This version wipes out the Pantheon tree.
               git push -f pantheon $CIRCLE_BRANCH
-              terminus env:wake portlandor.$CIRCLE_BRANCH # && sleep 60s
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 60s
             else
               rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
               # Wake up the multidev site and wait 30s.
               # The following two drush commands will fail without wait for a few seconds
-              terminus env:wake portlandor.$CIRCLE_BRANCH # && sleep 60s
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 60s
             fi
             # Clear cache. Import config files
 
