POWR-759 Update Cloudy breakpoints config

--- a/web/themes/custom/cloudy/cloudy.breakpoints.yml
+++ b/web/themes/custom/cloudy/cloudy.breakpoints.yml
@@ -1,24 +1,30 @@
+cloudy.extraSmall:
+  label: extra small
+  mediaQuery: ‘’
+  weight: 0
+  multipliers:
+    - 1x
 cloudy.small:
   label: small
-  mediaQuery: 'all and (min-width: 34em) and (max-width: 47em)'
-  weight: 0
+  mediaQuery: ‘screen and (min-width: 576px)’
+  weight: 1
   multipliers:
     - 1x
 cloudy.medium:
   label: medium
-  mediaQuery: 'all and (min-width: 48em) and (max-width: 61em)'
-  weight: 1
+  mediaQuery: ‘screen and (min-width: 768px)’
+  weight: 2
   multipliers:
     - 1x
 cloudy.large:
   label: large
-  mediaQuery: 'all and (min-width: 62em) and (max-width: 74em)'
-  weight: 2
+  mediaQuery: ‘screen and (min-width: 992px)’
+  weight: 3
   multipliers:
     - 1x
-cloudy.extra:
-  label: extra
-  mediaQuery: 'all and (min-width: 75em)'
-  weight: 3
+cloudy.extraLarge:
+  label: extra large
+  mediaQuery: ‘screen and (min-width: 1200px)’
+  weight: 4
   multipliers:
     - 1x
