--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,12 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_image
-    - field.field.node.news.field_body_content
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
@@ -57,6 +58,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_reviewer:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_summary:
     weight: 0
     label: hidden
