POWR-731 fix permissions so anyone can see body field; fix permission from POWR-721 to allow people to see popular field

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -50,6 +50,8 @@ permissions:
   - 'view any unpublished content'
   - 'view city_service revisions'
   - 'view event revisions'
+  - 'view field_body'
+  - 'view field_popular'
   - 'view field_shortname_or_acronym'
   - 'view guide revisions'
   - 'view information revisions'
@@ -57,6 +59,9 @@ permissions:
   - 'view media'
   - 'view news revisions'
   - 'view notification revisions'
+  - 'view own field_body'
+  - 'view own field_popular'
+  - 'view own field_shortname_or_acronym'
   - 'view own unpublished content'
   - 'view search api pages'
   - 'view the administration theme'
