--- a/web/sites/default/config/user.role.anonymous.yml
+++ b/web/sites/default/config/user.role.anonymous.yml
@@ -10,6 +10,11 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'view field_body'
+  - 'view field_popular'
   - 'view field_shortname_or_acronym'
   - 'view media'
+  - 'view own field_body'
+  - 'view own field_popular'
+  - 'view own field_shortname_or_acronym'
   - 'view search api pages'
