--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - node.type.news
   module:
     - ds
+    - entity_reference_revisions
     - panelizer
     - text
     - user
@@ -36,19 +37,27 @@ third_party_settings:
       content:
         - field_summary
         - field_body_content
+        - field_body
 id: node.news.default
 targetEntityType: node
 bundle: news
 mode: default
 content:
-  field_body_content:
-    type: text_default
-    weight: 1
+  field_body:
+    type: entity_reference_revisions_entity_view
+    weight: 2
     region: content
     label: hidden
     settings:
       view_mode: default
       link: ''
+    third_party_settings: {  }
+  field_body_content:
+    type: text_default
+    weight: 1
+    region: content
+    label: hidden
+    settings: {  }
     third_party_settings:
       ds:
         ds_limit: ''
@@ -58,14 +67,6 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_reviewer:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
     weight: 0
     label: hidden
@@ -104,11 +105,11 @@ content:
     region: content
 hidden:
   content_moderation_control: true
-  field_body: true
   field_feature_this_content: true
   field_feature_until: true
   field_featured_image: true
   field_legacy_path: true
   field_published_on: true
+  field_reviewer: true
   field_topics: true
   links: true
