--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "drupal/search_api_pantheon": "~1.0",
         "drupal/search_api_solr": "1.x-dev",
         "drupal/sendgrid_integration": "^1.2",
+        "drupal/seckit": "^1.1",
         "drupal/switch_page_theme": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
