--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -141,6 +141,7 @@ module:
   search_api_pantheon: 0
   search_api_solr: 0
   sendgrid_integration: 0
+  seckit: 0
   serialization: 0
   shortcut: 0
   simple_oauth: 0
