POWR-731 add menu_breadcrumb, configure, update group parent field, fix legacy path news field.

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -42,6 +42,7 @@ third_party_settings:
         classes: ''
         required_fields: false
       label: 'Contact Information'
+      region: hidden
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
