--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -41,6 +41,7 @@ third_party_settings:
         classes: ''
         required_fields: false
       label: 'Contact Information'
+      region: hidden
 id: group.program.default
 targetEntityType: group
 bundle: program
@@ -94,12 +95,9 @@ content:
     third_party_settings: {  }
   field_parent_group:
     weight: 3
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_phone:
     weight: 7
