--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -125,10 +125,10 @@ content:
   field_legacy_path:
     weight: 8
     region: content
-    type: string_textarea
+    type: string_textfield
     settings:
-      rows: 5
       placeholder: ''
+      size: 60
     third_party_settings: {  }
   field_published_on:
     weight: 9
