--- a/web/sites/default/config/easy_breadcrumb.settings.yml
+++ b/web/sites/default/config/easy_breadcrumb.settings.yml
@@ -1,4 +1,4 @@
-include_home_segment: true
+include_home_segment: false
 home_segment_title: Home
 home_segment_keep: 0
 include_title_segment: false
