--- a/web/sites/default/config/field.field.group.bureau_office.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_parent_group.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.group.field_parent_group
     - group.type.bureau_office
+    - group.type.elected_official
     - group.type.program
   module:
     - custom_add_another
@@ -27,6 +28,7 @@ settings:
   handler_settings:
     target_bundles:
       bureau_office: bureau_office
+      elected_official: elected_official
       program: program
     sort:
       field: _none
