--- a/web/sites/default/config/field.field.group.project.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.project.field_parent_group.yml
@@ -31,6 +31,7 @@ settings:
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
+      project: project
     sort:
       field: label
       direction: ASC
