--- a/web/sites/default/config/field.storage.group.field_parent_group.yml
+++ b/web/sites/default/config/field.storage.group.field_parent_group.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - group
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: group.field_parent_group
 field_name: field_parent_group
 entity_type: group
