POWR-731 don't show the current page in breadcrumb

--- a/web/sites/default/config/menu_breadcrumb.settings.yml
+++ b/web/sites/default/config/menu_breadcrumb.settings.yml
@@ -1,6 +1,6 @@
 determine_menu: true
 disable_admin_page: true
-append_current_page: true
+append_current_page: false
 current_page_as_link: false
 append_member_page: false
 member_page_as_link: false
@@ -15,8 +15,8 @@ menu_breadcrumb_menus:
     taxattach: 0
     langhandle: 0
   admin:
+    enabled: 1
     weight: 0
-    enabled: 0
     taxattach: 0
     langhandle: 0
   site-map:
