POWR-731 remove 'Part of' field from display as it is no longer needed with menu breadcrumbs

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -28,31 +28,15 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_parent_group
         - field_summary
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
-  field_parent_group:
-    weight: 0
-    label: inline
-    settings:
-      link: true
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: 'Part of'
-            lb-col: false
-            classes: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
     type: string
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
@@ -96,6 +80,7 @@ hidden:
   field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
+  field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
