--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -27,30 +27,14 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_parent_group
         - field_summary
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
-  field_parent_group:
-    weight: 0
-    label: inline
-    settings:
-      link: true
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: 'Part of'
-            lb-col: false
-            classes: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
-    weight: 1
+    weight: 0
     settings:
       link_to_entity: false
     third_party_settings:
@@ -94,6 +78,7 @@ hidden:
   field_email: true
   field_legacy_path: true
   field_logo: true
+  field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
