--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -24,7 +24,6 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_parent_group
         - field_summary
         - field_date_time_range
 id: group.project.default
@@ -34,7 +33,7 @@ mode: default
 content:
   field_date_time_range:
     type: daterange_default
-    weight: 2
+    weight: 1
     region: content
     label: above
     settings:
@@ -49,23 +48,8 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_parent_group:
-    weight: 0
-    label: inline
-    settings:
-      link: true
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: 'Part of'
-            lb-col: false
-            classes: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -105,6 +89,7 @@ hidden:
   created: true
   field_audience: true
   field_legacy_path: true
+  field_parent_group: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
