POWR-731 clean up some view names and remove attempt to create menu items with views.

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -13,7 +13,7 @@ dependencies:
     - node
     - user
 id: group_news
-label: 'Group: news'
+label: 'Group: News'
 module: views
 description: 'A set of views to help show news that are related to a group.'
 tag: Group
@@ -959,7 +959,7 @@ display:
           items_per_page: 20
           offset: 0
       menu:
-        type: 'default tab'
+        type: none
         title: 'News and notices'
         description: ''
         expanded: false
