--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -9,7 +9,7 @@ dependencies:
     - node
     - user
 id: group_services
-label: 'Group services'
+label: 'Group: Services'
 module: views
 description: 'A set of views to help show services that are related to a group.'
 tag: ''
@@ -394,7 +394,7 @@ display:
           content: '@total services found'
           plugin_id: result
       menu:
-        type: 'default tab'
+        type: none
         title: Services
         description: ''
         expanded: false
