POWR-697 Send email when new feedback is submitted

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -178,3 +178,5 @@ key: 1.8.0
 transliterate_filenames: 1.2.0
 portland_media_embed_helper: 0.1.0
 menu_breadcrumb: 1.8.0
+mailsystem: 4.1.0
+sendgrid_integration: 1.2.0
