--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -92,6 +92,7 @@ module:
   link: 0
   link_class: 0
   linkit: 0
+  mailsystem: 0
   masquerade: 0
   maxlength: 0
   media: 0
@@ -139,6 +140,7 @@ module:
   search_api_page: 0
   search_api_pantheon: 0
   search_api_solr: 0
+  sendgrid_integration: 0
   serialization: 0
   shortcut: 0
   simple_oauth: 0
