POWR-689 turn off audio/video autoplay

--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
+    - ds
     - text
     - video_embed_field
 id: media.audio.default
@@ -32,8 +33,15 @@ content:
       responsive: true
       width: 854
       height: 480
-      autoplay: true
-    third_party_settings: {  }
+      autoplay: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: video_embed_field_video
     region: content
   field_transcript:
