--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.media.video.field_transcript
     - media.type.video
   module:
+    - ds
     - text
     - video_embed_field
 _core:
@@ -35,8 +36,15 @@ content:
       responsive: true
       width: 854
       height: 480
-      autoplay: true
-    third_party_settings: {  }
+      autoplay: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   field_transcript:
     weight: 2
