POWR-731 fixed a couple of views to show under content hover state in admin toolbar

--- a/web/sites/default/config/views.view.files.yml
+++ b/web/sites/default/config/views.view.files.yml
@@ -741,9 +741,11 @@ display:
         type: tab
         title: Files
         description: ''
-        menu_name: admin
+        expanded: false
+        parent: system.admin_content
         weight: 0
-        context: ''
+        context: '0'
+        menu_name: admin
       display_description: ''
       defaults:
         pager: true
