--- a/web/sites/default/config/views.view.locked_content.yml
+++ b/web/sites/default/config/views.view.locked_content.yml
@@ -2,6 +2,8 @@ uuid: c7ecf4c3-8173-40ee-8bb8-10d5e08928e1
 langcode: en
 status: true
 dependencies:
+  config:
+    - system.menu.admin
   module:
     - content_lock
     - node
@@ -658,7 +660,7 @@ display:
       display_extenders: {  }
       path: admin/content/locked-content
       menu:
-        type: none
+        type: normal
         title: 'Locked content'
         description: ''
         expanded: false
