--- a/web/sites/default/config/views.view.media_library.yml
+++ b/web/sites/default/config/views.view.media_library.yml
@@ -393,22 +393,39 @@ display:
         - user.permissions
       tags:
         - 'config:core.entity_view_display.media.audio.default'
+        - extensions
         - 'config:core.entity_view_display.media.audio.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.audio.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.audio.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.document.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.document.teaser'
+        - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
-        - 'config:core.entity_view_display.media.image.default'
+        - extensions
         - 'config:core.entity_view_display.media.image.embedded'
-        - 'config:core.entity_view_display.media.image.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.image.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.video.default'
+        - extensions
         - 'config:core.entity_view_display.media.video.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.video.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.video.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.document.default'
+        - extensions
         - 'config:core.entity_view_display.media.document.media_library'
+        - extensions
+        - 'config:core.entity_view_display.media.image.default'
+        - extensions
+        - 'config:core.entity_view_display.media.image.media_library'
+        - extensions
   page:
     display_plugin: page
     id: page
@@ -421,7 +438,7 @@ display:
         type: tab
         title: Media
         description: 'Allows users to browse and administer media items'
-        expanded: false
+        expanded: true
         parent: system.admin_content
         weight: 5
         context: '0'
@@ -436,22 +453,39 @@ display:
         - user.permissions
       tags:
         - 'config:core.entity_view_display.media.audio.default'
+        - extensions
         - 'config:core.entity_view_display.media.audio.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.audio.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.audio.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.document.default'
+        - extensions
         - 'config:core.entity_view_display.media.document.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.document.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.document.teaser'
+        - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.image.default'
+        - extensions
         - 'config:core.entity_view_display.media.image.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.image.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.image.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.video.default'
+        - extensions
         - 'config:core.entity_view_display.media.video.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.video.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.video.thumbnail'
+        - extensions
   widget:
     display_plugin: page
     id: widget
@@ -580,19 +614,36 @@ display:
         - user.permissions
       tags:
         - 'config:core.entity_view_display.media.audio.default'
+        - extensions
         - 'config:core.entity_view_display.media.audio.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.audio.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.audio.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.document.default'
+        - extensions
         - 'config:core.entity_view_display.media.document.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.document.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.document.teaser'
+        - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.image.default'
+        - extensions
         - 'config:core.entity_view_display.media.image.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.image.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.image.thumbnail'
+        - extensions
         - 'config:core.entity_view_display.media.video.default'
+        - extensions
         - 'config:core.entity_view_display.media.video.embedded'
+        - extensions
         - 'config:core.entity_view_display.media.video.media_library'
+        - extensions
         - 'config:core.entity_view_display.media.video.thumbnail'
+        - extensions
