--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_active_time_frame
     - node.type.top_search
+    - system.menu.admin
     - user.role.administrator
   module:
     - datetime
@@ -513,15 +514,16 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
+        - extensions
   page:
     display_options:
       path: admin/content/topsearches
       menu:
-        type: tab
+        type: normal
         title: 'Top Searches'
         description: ''
         expanded: false
-        parent: ''
+        parent: system.admin_content
         weight: 10
         context: '0'
         menu_name: admin
@@ -547,3 +549,4 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
+        - extensions
