POWR-759 Update Cloudy breakpoints config

--- a/web/themes/custom/cloudy/cloudy.breakpoints.yml
+++ b/web/themes/custom/cloudy/cloudy.breakpoints.yml
@@ -1,30 +1,30 @@
 cloudy.extraSmall:
   label: extra small
-  mediaQuery: ‘’
+  mediaQuery: ''
   weight: 0
   multipliers:
     - 1x
 cloudy.small:
   label: small
-  mediaQuery: ‘screen and (min-width: 576px)’
+  mediaQuery: 'screen and (min-width: 576px)'
   weight: 1
   multipliers:
     - 1x
 cloudy.medium:
   label: medium
-  mediaQuery: ‘screen and (min-width: 768px)’
+  mediaQuery: 'screen and (min-width: 768px)'
   weight: 2
   multipliers:
     - 1x
 cloudy.large:
   label: large
-  mediaQuery: ‘screen and (min-width: 992px)’
+  mediaQuery: 'screen and (min-width: 992px)'
   weight: 3
   multipliers:
     - 1x
 cloudy.extraLarge:
   label: extra large
-  mediaQuery: ‘screen and (min-width: 1200px)’
+  mediaQuery: 'screen and (min-width: 1200px)'
   weight: 4
   multipliers:
     - 1x
