--- a/web/sites/default/config/responsive_image.styles.paragraph_image.yml
+++ b/web/sites/default/config/responsive_image.styles.paragraph_image.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - image.style.res
     - image.style.responsive_
-    - image.style.responsive_extra
     - image.style.responsive_large
     - image.style.responsive_medium
   theme:
@@ -13,11 +12,6 @@ dependencies:
 id: paragraph_image
 label: 'Paragraph image'
 image_style_mappings:
-  -
-    breakpoint_id: cloudy.extra
-    multiplier: 1x
-    image_mapping_type: image_style
-    image_mapping: responsive_extra
   -
     breakpoint_id: cloudy.large
     multiplier: 1x
@@ -33,5 +27,10 @@ image_style_mappings:
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: res
+  -
+    breakpoint_id: cloudy.extraSmall
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: responsive_
 breakpoint_group: cloudy
 fallback_image_style: responsive_
