POWR-759 Forgot to map extra large

--- a/web/sites/default/config/responsive_image.styles.paragraph_image.yml
+++ b/web/sites/default/config/responsive_image.styles.paragraph_image.yml
@@ -13,6 +13,11 @@ id: paragraph_image
 label: 'Paragraph image'
 image_style_mappings:
   -
+    breakpoint_id: cloudy.extraLarge
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: responsive_large
+  -
     breakpoint_id: cloudy.large
     multiplier: 1x
     image_mapping_type: image_style
