POWR-731 resolve config conflicts.

--- a/web/sites/default/config/field.field.node.news.field_body.yml
+++ b/web/sites/default/config/field.field.node.news.field_body.yml
@@ -31,7 +31,7 @@ entity_type: node
 bundle: news
 label: Body
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
