--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -128,5 +128,6 @@ hidden:
   field_feature_until: true
   field_legacy_path: true
   field_published_on: true
+  field_reviewer: true
   field_topics: true
   links: true
