--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -171,5 +171,6 @@ hidden:
   field_featured_image: true
   field_legacy_path: true
   field_published_on: true
+  field_reviewer: true
   field_topics: true
   links: true
