Hotfix-735 fix the order of summary again

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -17,12 +17,14 @@ dependencies:
     - image.style.thumbnail
     - node.type.news
   module:
+    - allowed_formats
     - chosen_field
     - conditional_fields
     - content_moderation
     - datetime
     - image
     - lightning_media
+    - maxlength
     - paragraphs
     - path
     - text
@@ -33,7 +35,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -58,12 +60,20 @@ content:
     region: content
   field_body_content:
     type: text_textarea
-    weight: 5
+    weight: 6
     region: content
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
   field_feature_this_content:
     weight: 1
     settings:
@@ -130,7 +140,7 @@ content:
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 12
+    weight: 13
     region: content
     type: string_textfield
     settings:
@@ -144,7 +154,7 @@ content:
     type: datetime_default
     region: content
   field_reviewer:
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -166,7 +176,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -179,13 +189,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 11
+    weight: 12
     region: content
     settings:
       display_label: true
@@ -200,7 +210,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 14
+    weight: 15
     region: content
     settings:
       match_operator: CONTAINS
@@ -208,7 +218,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
