--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
-    - field.field.node.news.field_group
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_image
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
     - field.field.node.news.field_reviewer
@@ -49,7 +49,9 @@ content:
     weight: 2
     region: content
     label: hidden
-    settings: {  }
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
   field_body_content:
     type: text_default
@@ -66,14 +68,6 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_group:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
     weight: 0
     label: hidden
@@ -115,6 +109,7 @@ hidden:
   field_feature_this_content: true
   field_feature_until: true
   field_featured_image: true
+  field_group: true
   field_legacy_path: true
   field_published_on: true
   field_reviewer: true
