--- a/web/sites/default/config/core.entity_view_display.user.user.full.yml
+++ b/web/sites/default/config/core.entity_view_display.user.user.full.yml
@@ -21,6 +21,7 @@ third_party_settings:
         - member_for
         - user_assigned_to_review_entity_view_1
         - user_assigned_to_review_entity_view_2
+        - user_member_of_groups_entity_view_1
         - masquerade
   panelizer:
     enable: false
@@ -95,7 +96,7 @@ bundle: user
 mode: full
 content:
   masquerade:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -111,6 +112,11 @@ content:
     third_party_settings: {  }
   user_assigned_to_review_entity_view_2:
     weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  user_member_of_groups_entity_view_1:
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
