--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -1,27 +1,28 @@
 seckit_xss:
   csp:
-    checkbox: false
-    report-only: false
-    default-src: ''
-    script-src: ''
+    checkbox: true
+    report-only: true
+    default-src: '''self'''
+    script-src: '''self'' ''unsafe-inline'' ''unsafe-eval'' https://www.google-analytics.com https://unpkg.com https://cdn.jsdelivr.net'
     object-src: ''
-    img-src: ''
+    img-src: '''self'' https://www.google-analytics.com'
     media-src: ''
-    frame-src: ''
+    frame-src: '''self'' https://www.youtube.com/embed/'
     frame-ancestors: ''
     child-src: ''
-    font-src: ''
-    connect-src: ''
-    report-uri: /report-csp-violation
+    font-src: '''self'' https://fonts.gstatic.com https://themes.googleusercontent.com https://use.fontawesome.com'
+    connect-src: '''self'' https://www.google-analytics.com'
+    report-uri: 'https://portlandgov.report-uri.com/r/d/csp/wizard'
     policy-uri: ''
+    style-src: '''self'' ''unsafe-inline'' https://fonts.googleapis.com/css https://use.fontawesome.com'
   x_xss:
     seckit_x_xss_option_disable: Disabled
     seckit_x_xss_option_0: '0'
     seckit_x_xss_option_1: 1;
     seckit_x_xss_option_1_block: '1; mode=block'
-    select: 0
+    select: 2
 seckit_csrf:
-  origin: false
+  origin: true
   origin_whitelist: ''
 seckit_clickjacking:
   js_css_noscript: false
@@ -29,9 +30,9 @@ seckit_clickjacking:
   x_frame: '1'
   x_frame_allow_from: ''
 seckit_ssl:
-  hsts: false
-  hsts_subdomains: false
-  hsts_max_age: 1000
+  hsts: true
+  hsts_subdomains: true
+  hsts_max_age: 300
   hsts_preload: false
 seckit_ct:
   expect_ct: false
@@ -41,8 +42,8 @@ seckit_ct:
 seckit_various:
   from_origin: false
   from_origin_destination: same
-  referrer_policy: false
-  referrer_policy_policy: no-referrer-when-downgrade
+  referrer_policy: true
+  referrer_policy_policy: unsafe-url
   disable_autocomplete: false
 _core:
   default_config_hash: tEkqVdaa812lro0-CjtQGv-aeFNZ088m1F3yAbuy8hQ
