--- a/composer.json
+++ b/composer.json
@@ -77,12 +77,13 @@
         "drupal/prepopulate": "^2.0",
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/redirect": "^1.1",
+        "drupal/remove_http_headers": "^1.0@alpha",
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_pantheon": "~1.0",
         "drupal/search_api_solr": "1.x-dev",
-        "drupal/sendgrid_integration": "^1.2",
         "drupal/seckit": "^1.1",
+        "drupal/sendgrid_integration": "^1.2",
         "drupal/switch_page_theme": "^1.0",
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
