POWR-660 Config remove_http_headers

--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -42,7 +42,7 @@ seckit_ct:
 seckit_various:
   from_origin: false
   from_origin_destination: same
-  referrer_policy: true
+  referrer_policy: false
   referrer_policy_policy: unsafe-url
   disable_autocomplete: false
 _core:
