--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -129,6 +129,7 @@ module:
   rdf: 0
   redirect: 0
   redirect_404: 0
+  remove_http_headers: 0
   responsive_image: 0
   rest: 0
   rh_node: 0
@@ -139,8 +140,8 @@ module:
   search_api_page: 0
   search_api_pantheon: 0
   search_api_solr: 0
-  sendgrid_integration: 0
   seckit: 0
+  sendgrid_integration: 0
   serialization: 0
   shortcut: 0
   simple_oauth: 0
